--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,9 +247,9 @@ jobs:
             # Don't submit coverage report for forks, but let the build succeed
             export SHELL=/bin/bash
             if [[ -z "$COVERALLS_REPO_TOKEN" ]]; then
-              mix coveralls.html --parallel --umbrella --include child_chain --exclude common --exclude test --trace
+              mix coveralls.html --parallel --umbrella --include child_chain --exclude common --exclude test --exclude live_childchain --trace
             else
-              mix coveralls.circle --parallel --umbrella --include child_chain --exclude common --exclude test --trace ||
+              mix coveralls.circle --parallel --umbrella --include child_chain --exclude common --exclude test --exclude live_childchain --trace ||
                 # if mix failed, then coveralls_report won't run, so signal done here and return original exit status
                 (retval=$? && curl -k https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN -d "payload[build_num]=$CIRCLE_WORKFLOW_WORKSPACE_ID&payload[status]=done" && exit $retval)
             fi
@@ -272,9 +272,9 @@ jobs:
             # Don't submit coverage report for forks, but let the build succeed
             export SHELL=/bin/bash
             if [[ -z "$COVERALLS_REPO_TOKEN" ]]; then
-              mix coveralls.html --parallel --umbrella --include common --exclude child_chain --exclude test --trace
+              mix coveralls.html --parallel --umbrella --include common --exclude child_chain --exclude test --exclude live_childchain --trace
             else
-              mix coveralls.circle --parallel --umbrella --include common --exclude child_chain --exclude test --trace ||
+              mix coveralls.circle --parallel --umbrella --include common --exclude child_chain --exclude test --exclude live_childchain --trace ||
                 # if mix failed, then coveralls_report won't run, so signal done here and return original exit status
                 (retval=$? && curl -k https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN -d "payload[build_num]=$CIRCLE_WORKFLOW_WORKSPACE_ID&payload[status]=done" && exit $retval)
             fi
@@ -297,9 +297,9 @@ jobs:
             # Don't submit coverage report for forks, but let the build succeed
             export SHELL=/bin/bash
             if [[ -z "$COVERALLS_REPO_TOKEN" ]]; then
-              mix coveralls.html --parallel --umbrella --trace --exclude common --exclude child_chain
+              mix coveralls.html --parallel --umbrella --trace --exclude common --exclude child_chain --exclude live_childchain
             else
-              mix coveralls.circle --parallel --umbrella --trace --exclude common --exclude child_chain ||
+              mix coveralls.circle --parallel --umbrella --trace --exclude common --exclude child_chain --exclude live_childchain ||
                 # if mix failed, then coveralls_report won't run, so signal done here and return original exit status
                 (retval=$? && curl -k https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN -d "payload[build_num]=$CIRCLE_WORKFLOW_WORKSPACE_ID&payload[status]=done" && exit $retval)
             fi
