--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ commands:
       - run:
           name: Install Erlang and Elixir
           command: |
-            [ -d ~/.asdf-vm ] || git clone https://github.com/asdf-vm/asdf.git ~/.asdf-vm --branch v0.7.4
+            [ -d ~/.asdf-vm ] || git clone https://github.com/asdf-vm/asdf.git ~/.asdf-vm --branch v0.7.8
             echo 'source ~/.asdf-vm/asdf.sh' >> $BASH_ENV
             source $BASH_ENV
             asdf plugin-add erlang || asdf plugin-update erlang
@@ -444,6 +444,7 @@ jobs:
             make install
             make generate_api_code
             mix local.hex --force
+            mix local.rebar rebar3 --force
             mix deps.get
             mix test
       - run:
@@ -560,6 +561,7 @@ jobs:
             make install
             make generate_api_code
             mix local.hex --force
+            mix local.rebar rebar3 --force
             mix deps.get
             mix test --only reorg --trace
           no_output_timeout: 30m
@@ -587,7 +589,7 @@ jobs:
       - run:
           name: Install Erlang and Elixir
           command: |
-            [ -d ~/.asdf-vm ] || git clone https://github.com/asdf-vm/asdf.git ~/.asdf-vm --branch v0.7.4
+            [ -d ~/.asdf-vm ] || git clone https://github.com/asdf-vm/asdf.git ~/.asdf-vm --branch v0.7.8
             echo 'source ~/.asdf-vm/asdf.sh' >> $BASH_ENV
             source $BASH_ENV
             asdf plugin-add erlang || asdf plugin-update erlang
@@ -637,6 +639,7 @@ jobs:
           command: |
             cd priv/cabbage
             mix local.hex --force
+            mix local.rebar rebar3 --force
             make install
             make generate_api_code
             mix deps.get
@@ -652,7 +655,6 @@ jobs:
           name: Run specs
           command: |
             cd priv/cabbage
-            mix local.hex --force
             mix test
 
   publish_child_chain:
