--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -627,16 +627,16 @@ jobs:
           name: Start Watchers
           command: docker-compose up watcher watcher_info
           background: true
-      - run:
-          name: Run Child Chain
-          environment:
-            CXX: "g++-9"
-          command: |
-            set -e
-            mix deps.get 
-            make start-child_chain OVERRIDING_START=start_iex OVERRIDING_VARIABLES=./bin/variables_test_barebone
-          background: true
-          no_output_timeout: 2400
+      # - run:
+      #     name: Run Child Chain
+      #     environment:
+      #       CXX: "g++-9"
+      #     command: |
+      #       set -e
+      #       mix deps.get 
+      #       make start-child_chain OVERRIDING_START=start_iex OVERRIDING_VARIABLES=./bin/variables_test_barebone
+      #     background: true
+      #     no_output_timeout: 2400
       - save_cache:
           key: v2-dev-release-cache-{{ checksum "mix.lock" }}
           paths:
@@ -644,27 +644,27 @@ jobs:
             - "deps/"
             - "_build/dev/"
             - "_build/dev/"
-      - run:
-          name: Install specs
-          command: |
-            make install-hex-rebar
-            cd priv/cabbage
-            mix deps.get
-            make install
-            make generate_api_code
-      - run:
-          name: Print docker and process states
-          command: |
-            docker ps
-            ps axww | grep watcher
-            ps axww | grep watcher_info
-            ps axww | grep child_chain
-      - run: sh .circleci/status.sh
-      - run:
-          name: Run specs
-          command: |
-            cd priv/cabbage
-            mix test
+      # - run:
+      #     name: Install specs
+      #     command: |
+      #       make install-hex-rebar
+      #       cd priv/cabbage
+      #       mix deps.get
+      #       make install
+      #       make generate_api_code
+      # - run:
+      #     name: Print docker and process states
+      #     command: |
+      #       docker ps
+      #       ps axww | grep watcher
+      #       ps axww | grep watcher_info
+      #       ps axww | grep child_chain
+      # - run: sh .circleci/status.sh
+      # - run:
+      #     name: Run specs
+      #     command: |
+      #       cd priv/cabbage
+      #       mix test
 
   publish_child_chain:
     machine:
