--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -437,42 +437,42 @@ jobs:
             make start_daemon_services-2 || (START_RESULT=$?; docker-compose logs; exit $START_RESULT;)
       - install_elixir
       - run: sh .circleci/status.sh
-      # - run:
-      #     name: Openapi install
-      #     command: make install
-      #     working_directory: ~/src/priv/cabbage
-      # - run:
-      #     name: API code
-      #     working_directory: ~/src/priv/cabbage
-      #     command: |
-      #       make generate_api_code
-      # - run:
-      #     name: Deps get
-      #     working_directory: ~/src/priv/cabbage
-      #     command: mix deps.get
-      # - run:
-      #     name: Test
-      #     working_directory: ~/src/priv/cabbage
-      #     command: mix test
-      # - run:
-      #     name: (Cabbage) Format generated code and check for warnings
-      #     command: |
-      #       cd priv/cabbage
-      #       # run format ONLY on formatted code so that it cleans up quoted atoms because
-      #       # we cannot exclude folders to --warnings-as-errors
-      #       mix format apps/child_chain_api/lib/child_chain_api/model/*.ex
-      #       mix format apps/watcher_info_api/lib/watcher_info_api/model/*.ex
-      #       mix format apps/watcher_security_critical_api/lib/watcher_security_critical_api/model/*.ex
-      #       MIX_ENV=test mix do compile --warnings-as-errors --ignore-module-conflict --force, test --exclude test
-      # - save_cache:
-      #     key: v2-mix-specs-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
-      #     paths:
-      #       - "priv/cabbage/deps"
-      # - run:
-      #     name: (Cabbage) Credo and formatting
-      #     command: |
-      #       cd priv/cabbage
-      #       mix do credo, format --check-formatted --dry-run
+      - run:
+          name: Openapi install
+          command: make install
+          working_directory: ~/src/priv/cabbage
+      - run:
+          name: API code
+          working_directory: ~/src/priv/cabbage
+          command: |
+            make generate_api_code
+      - run:
+          name: Deps get
+          working_directory: ~/src/priv/cabbage
+          command: mix deps.get
+      - run:
+          name: Test
+          working_directory: ~/src/priv/cabbage
+          command: mix test
+      - run:
+          name: (Cabbage) Format generated code and check for warnings
+          command: |
+            cd priv/cabbage
+            # run format ONLY on formatted code so that it cleans up quoted atoms because
+            # we cannot exclude folders to --warnings-as-errors
+            mix format apps/child_chain_api/lib/child_chain_api/model/*.ex
+            mix format apps/watcher_info_api/lib/watcher_info_api/model/*.ex
+            mix format apps/watcher_security_critical_api/lib/watcher_security_critical_api/model/*.ex
+            MIX_ENV=test mix do compile --warnings-as-errors --ignore-module-conflict --force, test --exclude test
+      - save_cache:
+          key: v2-mix-specs-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+          paths:
+            - "priv/cabbage/deps"
+      - run:
+          name: (Cabbage) Credo and formatting
+          command: |
+            cd priv/cabbage
+            mix do credo, format --check-formatted --dry-run
 
   test_docker_compose_performance:
     machine:
@@ -626,16 +626,14 @@ jobs:
           name: Start Watchers
           command: docker-compose up watcher watcher_info
           background: true
-      # - run:
-      #     name: Run Child Chain
-      #     environment:
-      #       CXX: "g++-9"
-      #     command: |
-      #       set -e
-      #       mix deps.get 
-      #       make start-child_chain OVERRIDING_START=start_iex OVERRIDING_VARIABLES=./bin/variables_test_barebone
-      #     background: true
-      #     no_output_timeout: 2400
+      - run:
+          name: Run Child Chain
+          command: |
+            set -e
+            mix deps.get 
+            make start-child_chain OVERRIDING_START=start_iex OVERRIDING_VARIABLES=./bin/variables_test_barebone
+          background: true
+          no_output_timeout: 2400
       - save_cache:
           key: v2-dev-release-cache-{{ checksum "mix.lock" }}
           paths:
@@ -643,27 +641,27 @@ jobs:
             - "deps/"
             - "_build/dev/"
             - "_build/dev/"
-      # - run:
-      #     name: Install specs
-      #     command: |
-      #       make install-hex-rebar
-      #       cd priv/cabbage
-      #       mix deps.get
-      #       make install
-      #       make generate_api_code
-      # - run:
-      #     name: Print docker and process states
-      #     command: |
-      #       docker ps
-      #       ps axww | grep watcher
-      #       ps axww | grep watcher_info
-      #       ps axww | grep child_chain
-      # - run: sh .circleci/status.sh
-      # - run:
-      #     name: Run specs
-      #     command: |
-      #       cd priv/cabbage
-      #       mix test
+      - run:
+          name: Install specs
+          command: |
+            make install-hex-rebar
+            cd priv/cabbage
+            mix deps.get
+            make install
+            make generate_api_code
+      - run:
+          name: Print docker and process states
+          command: |
+            docker ps
+            ps axww | grep watcher
+            ps axww | grep watcher_info
+            ps axww | grep child_chain
+      - run: sh .circleci/status.sh
+      - run:
+          name: Run specs
+          command: |
+            cd priv/cabbage
+            mix test
 
   publish_child_chain:
     machine:
